Add 3D lens visualization feature
- Add lens_visualizer.py module for 3D rendering
- Integrate 3D visualization panel into GUI editor
- Use matplotlib and numpy for 3D surface plots
- Add interactive 3D cross-section view of lens geometry
- Update GUI layout to accommodate visualization panel (3-column)
- Add Update 3D View and Clear View controls
- Automatically update 3D view when lens is selected/modified

New features:
- Real-time 3D lens rendering
- Color-coded surfaces (blue: R1, green: R2, gray: edge)
- Optical axis visualization (red dashed line)
- Interactive rotation, zoom, and pan
- Graceful degradation if matplotlib/numpy not installed

Documentation:
- Update README with 3D visualization section
- Add installation instructions for matplotlib/numpy
- Update requirements.txt with optional dependencies
- Create test_visualization.py for standalone testing

GUI changes:
- Increase window width to 1400px for 3D panel
- Add 3D visualization panel as third column
- Auto-update 3D view on lens selection
- Show install message if dependencies missing

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 # OpenLense Requirements
 # Python 3.6+ required
 
-# No external dependencies required!
-# All functionality uses Python standard library only:
+# Core dependencies: None!
+# All core functionality uses Python standard library only:
 # - tkinter (GUI) - included with most Python installations
 # - json (data storage) - standard library
 # - datetime (timestamps) - standard library
 # - os (file operations) - standard library
 # - unittest (testing) - standard library
+
+# Optional: 3D Visualization (recommended)
+matplotlib>=3.3.0
+numpy>=1.19.0
 
 # Optional: Development tools (not required for application use)
 # These are suggestions if you want additional development tools
