fix: Make scipy an optional dependency with graceful fallbacks
Address dependency concern: scipy was used but not documented

Changes:
- Updated diffraction.py to optionally import scipy
  - Added fallback Bessel function approximation (j1)
  - Module loads without scipy, uses approximations

- Updated image_simulator.py to handle missing scipy
  - All scipy.ndimage imports now optional
  - Graceful degradation for:
    - Gaussian filtering (aberrations, diffraction)
    - Image zoom operations (chromatic aberration)
    - Sobel edge detection (sharpness metrics)
  - Fallback implementations using numpy/PIL where possible

- Updated requirements.txt
  - Added scipy>=1.5.0 as optional dependency
  - Added Pillow>=8.0.0 as optional dependency
  - Documented which features require each package
  - Clear comments about graceful degradation

- Updated README.md
  - New dependency table showing optional packages
  - Clear feature matrix (what works without each dependency)
  - Updated installation instructions
  - Separated core requirements from optional dependencies

Core Functionality Preserved:
✅ All core lens calculations work without scipy
✅ GUI and CLI work without scipy
✅ Ray tracing works (requires numpy/matplotlib)
✅ Aberrations calculations work
✅ All 39 tests pass

Optional Features (require scipy):
- Advanced diffraction with Bessel functions
- Image simulation with gaussian filtering
- Chromatic aberration simulation
- Advanced image quality metrics

All modules now handle missing dependencies gracefully with
informative warnings and fallback implementations.

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,20 @@
 # - os (file operations) - standard library
 # - unittest (testing) - standard library
 
-# Optional: 3D Visualization (recommended)
+# Optional: 3D Visualization and Ray Tracing (recommended)
 matplotlib>=3.3.0
 numpy>=1.19.0
+
+# Optional: Advanced Features
+# Uncomment if you need these features:
+# scipy>=1.5.0  # For advanced image simulation, diffraction calculations with Bessel functions
+# Pillow>=8.0.0  # For image loading in image simulator
+
+# Features requiring scipy:
+# - Diffraction calculations (DiffractionCalculator) - uses Bessel functions
+# - Image simulation with aberrations (ImageSimulator) - uses gaussian filters
+# - Advanced image processing (zoom, sobel edge detection)
+# Note: These modules gracefully degrade if scipy is not available
 
 # Optional: Development tools (not required for application use)
 # These are suggestions if you want additional development tools
